--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Genea.app - membuat silsilah keluarga</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Genea is a free tool to author your family tree without an account. Genea gives you complete control over where to store your GEDCOM ancestry heritage data." />
+    <meta name="description" content="Genea ini berasal dari genea.app yang berbahasa inggris. Genea gives you complete control over where to store your GEDCOM ancestry heritage data." />
     <meta name="keywords" content="genea,genealogy,software,free,open source,gedcom,family tree,family lineage,heritage,myheritage,web based,online,genealogist,historian,ancestors,archive,ancestry,legacy,birth,death,funeral,marriage,privacy by design" />
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <!-- Dependencies -->
