--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h1 class="header">Genea.app</h1>
             <div class="divider"></div>
             <div class="section" v-if="!isNative()">
-                <h4 class="light">Build and edit your family tree; completely free!</h4>
+                <h4 class="light">membuat dan mengedit silsilah keluarga; 100% Gratisss!</h4>
                 <p style="text-align: justify;">
                     Genea is a <a href="https://en.wikipedia.org/wiki/Privacy_by_design" target="_blank">privacy by design</a> and <a href="https://github.com/genea-app/genea-app" target="_blank">open source</a> tool anyone can use to author or edit their
                     family tree. Your data is formatted following the <a href="https://www.gedcom.org/" target="_blank">GEDCOM</a> specifications so it can be exchanged with other genealogy services. All processing is done in the browser, leaving you
